--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "eslint": "^8.14.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.0",
+    "eslint-plugin-promise": "^6.0.0",
     "vite": "^2.9.5"
   },
   "dependencies": {
+    "eslint-plugin-prettier": "^4.0.0",
     "notie": "^4.3.1"
   }
 }
